--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10"
   }
 }
