--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "vue": "^2.5.17"
   }
 }
